# devtrack

./: .devtrack.json  .gitignore  .pre-commit-config.yaml  BRANCH_STRATEGY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  README.md  devtrack_roadmap.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
devtrack/: cli.py  commits.py  project.py  session.py  status.py  tasks.py  utils.py
devtrack/cmd/: add.py  done.py  edit.py  help.py  init.py  remove.py  status.py  tasks.py
devtrack/commands/: add.py  commit.py  focus.py  help.py  summary.py
devtrack/scripts/: generate_changelog.py
tests/: test_cli.py  test_commits.py  test_project.py  test_tasks.py  test_utils.py
tests/session/: test_session.py
tests/status/: test_show_status.py
